fix Testimonial left Button Not Visibible

--- a/styles/testimonial.module.css
+++ b/styles/testimonial.module.css
@@ -28,9 +28,5 @@
   }
 }
 
-@media (max-width: 400px) {
-  .custom-padding {
-    padding: 20px;
-  }
-}
+
 
